--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -4,216 +4,174 @@
 }}
 
 <main>
-    <h1 class="text-center text-uppercase">Hello word</h1>
-    <h2 class="text-end text-lovercase">Secondary</h2>
-    <h3 class="text-capitalize">third word path</h3>
-
-    <hr />
-    <div class="display-1">Hello word</div>
-    <div class="display-5">Secondary</div>
-    <div class="display-6">3rd path</div>
-
-    <hr>
-    <span class="text-muted">Додатковий текст</span>
-    <div class="display-1 text-muted">Hello word</div>
-    <hr>
-
-    <button class="btn btn-primary">
-        <span class="text-uppercase">Button primary</span>
-    </button>
-    <button class="btn btn-secondary">Button secondary</button>
-    <button class="btn btn-success">Button success</button>
-    <button class="btn btn-danger">Button danger</button>
-    <button class="btn btn-warning">Button warning</button>
-    <button class="btn btn-info">Button info</button>
-    <button class="btn btn-light">Button light</button>
-    <button class="btn btn-dark">Button dark</button>
-    <button class="btn btn-link">Button link</button>
-    <hr>
-
-    <p class="text-primary">My text</p>
-    <p class="text-secondary">My text</p>
-    <p class="text-success">My text</p>
-    <hr>
-
-    <button class="btn btn-outline-primary">My button</button>
-    <button class="btn btn-outline-secondary">My button</button>
-    <button class="btn btn-outline-success">My button</button>
-    <hr>
-
-    <button class="btn btn-outline-primary btn-lg">My button</button>
-    <button class="btn btn-outline-secondary btn-sm">My button</button>
-    <button class="btn btn-outline-success">My button</button>
-    <hr>
-
-    <div class="card">
-        <div class="card-body"> {{!--якщо прибрати цей div та cad-body, --}}
-            This is content {{!--то контект прижметься до лівого краю рамки --}}
-        </div>
-    </div>
-    <hr>
-
-    <div>
-        <div class="card">
-            <img class="card-img-top" src="https://picsum.photos/400/200" alt="Product photo">
-            <div class="card-body">
-                <h5 class="card-title text-bg-primary">Product #16433</h5>
-                <p class="text-bg-secondary">USB хаб Type C 12 <br> 1 HDMI</p>
-                <a href="#" class="btn btn-primary">Open</a>
+    <div class="row gy-5">
+        <section class="col-12">
+            <div class="card">
+                <img class="card-img-top" src="https://picsum.photos/400/200" alt="Product photo">
+                <div class="card-body">
+                    <h5 class="card-title text-bg-primary">Product #16433</h5>
+                    <p class="text-bg-secondary">USB хаб Type C 12 <br> 1 HDMI</p>
+                    <a href="#" class="btn btn-primary">Open</a>
+                </div>
             </div>
-        </div>
+        </section>
 
-        <ul class="list-group">
-            <li class="list-group-item">
-                <ul>
-                    <li class="list-group-item">Item 1.1</li>
-                    <li class="list-group-item">Item 1.2</li>
+        <section class="col-3">
+            <div class="card text-bg-warning">
+                <div class="card-header">
+                    <div>Menu</div>
+                </div>
+
+                <ul class="list-group">
+                    <li class="list-group-item text-bg-danger">
+                        <a href="#" class="btn btn-link">Home page</a>
+                    </li>
+                    <li class="list-group-item text-bg-success">
+                        <a href="#" class="btn btn-link">Summary page</a>
+                    </li>
+                    <li class="list-group-item text-bg-secondary">
+                        <a href="#" class="btn btn-link">Skills page</a>
+                    </li>
                 </ul>
-            </li>
-            <li class="list-group-item">Item 2</li>
-            <li class="list-group-item">Item 3</li>
-        </ul>
 
-        <h5>Menu</h5>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <a href="#" class="btn btn-link">Home page</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#" class="btn btn-link">Summary page</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#" class="btn btn-link">Skills page</a>
-            </li>
-        </ul>
-
-        <div class="card text-bg-warning">
-            <div class="card-header">
-                <div>Menu</div>
-            </div>
-
-            <ul class="list-group">
-                <li class="list-group-item text-bg-danger">
-                    <a href="#" class="btn btn-link">Home page</a>
-                </li>
-                <li class="list-group-item text-bg-success">
-                    <a href="#" class="btn btn-link">Summary page</a>
-                </li>
-                <li class="list-group-item text-bg-secondary">
-                    <a href="#" class="btn btn-link">Skills page</a>
-                </li>
-            </ul>
-
-            <div class="card-footer">
-                <button class="btn btn-dark btn-sm">Update list</button>
-            </div>
-        </div>
-
-        <table class="table table-striped table-bordered"> {{!-- таблиця/смугаста/у рамці --}}
-            <thead>
-                <tr>
-                    <th>
-                        #id
-                    </th>
-                    <th>
-                        name
-                    </th>
-                    <th>
-                        age
-                    </th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <th>1</th>
-                    <td>Jhon</td>
-                    <td>35</td>
-                </tr>
-                <tr>
-                    <th>2</th>
-                    <td>Smith</td>
-                    <td>29</td>
-                </tr>
-                <tr>
-                    <th>3</th>
-                    <td>peter</td>
-                    <td>28</td>
-                </tr>
-            </tbody>
-        </table>
-
-
-        <div class="card text-bg-success text-center">
-            <div class="card-header">Header</div>
-            <div class="card-body">
-                <h6 class="card-title">This is title</h6>
-                <p>This is content of our box</p>
-                <button class="btn btn-light">Click</button>
-            </div>
-            <div class="card-footer">Footer</div>
-        </div>
-
-
-        <div class="row gy-5 gx-1">
-            <div class='col-4'>
-                <div class="card text-bg-success text-center">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h6 class="card-title">This is title</h6>
-                        <p>This is content of our box</p>
-                        <button class="btn btn-light">Click</button>
-                    </div>
-                    <div class="card-footer">Footer</div>
+                <div class="card-footer">
+                    <button class="btn btn-dark btn-sm">Update list</button>
                 </div>
             </div>
-            <div class='col-4'>
-                <div class="card text-bg-success text-center">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h6 class="card-title">This is title</h6>
-                        <p>This is content of our box</p>
-                        <button class="btn btn-light">Click</button>
+        </section>
+
+        <section class="col-9">
+            <table class="table table-striped table-bordered"> {{!-- таблиця/смугаста/у рамці --}}
+                <thead>
+                    <tr>
+                        <th>
+                            #id
+                        </th>
+                        <th>
+                            name
+                        </th>
+                        <th>
+                            age
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>Smith</td>
+                        <td>29</td>
+                    </tr>
+                    <tr>
+                        <th>3</th>
+                        <td>peter</td>
+                        <td>28</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section lass="col-12">
+            <div class="row gy-3 gx-1">
+                <div class='col-4'>
+                    <div class="card text-bg-success text-center">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer">Footer</div>
                     </div>
-                    <div class="card-footer">Footer</div>
+                </div>
+                <div class='col-4'>
+                    <div class="card text-bg-success text-center">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer">Footer</div>
+                    </div>
+                </div>
+                <div class='col-4'>
+                    <div class="card text-bg-success text-center">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer">Footer</div>
+                    </div>
+                </div>
+                <div class='col-4'>
+                    <div class="card text-bg-success text-center">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer">Footer</div>
+                    </div>
+                </div>
+                <div class='col-4'>
+                    <div class="card text-bg-success text-center">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer">Footer</div>
+                    </div>
+                </div>
+                <div class='col-4'>
+                    <div class="card text-bg-success text-center">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click</button>
+                        </div>
+                        <div class="card-footer">Footer</div>
+                    </div>
                 </div>
             </div>
-            <div class='col-4'>
-                <div class="card text-bg-success text-center">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h6 class="card-title">This is title</h6>
-                        <p>This is content of our box</p>
-                        <button class="btn btn-light">Click</button>
-                    </div>
-                    <div class="card-footer">Footer</div>
-                </div>
-            </div>
-            <div class='col-4'>
-                <div class="card text-bg-success text-center">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h6 class="card-title">This is title</h6>
-                        <p>This is content of our box</p>
-                        <button class="btn btn-light">Click</button>
-                    </div>
-                    <div class="card-footer">Footer</div>
-                </div>
-            </div>
-            <div class='col-4'>
-                <div class="card text-bg-success text-center">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h6 class="card-title">This is title</h6>
-                        <p>This is content of our box</p>
-                        <button class="btn btn-light">Click</button>
-                    </div>
-                    <div class="card-footer">Footer</div>
-                </div>
-            </div>
-        </div>
+        </section>
     </div>
 
+
+    <ul class="list-group">
+        <li class="list-group-item">
+            <ul>
+                <li class="list-group-item">Item 1.1</li>
+                <li class="list-group-item">Item 1.2</li>
+            </ul>
+        </li>
+        <li class="list-group-item">Item 2</li>
+        <li class="list-group-item">Item 3</li>
+    </ul>
+
+    <h5>Menu</h5>
+    <ul class="list-group">
+        <li class="list-group-item">
+            <a href="#" class="btn btn-link">Home page</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#" class="btn btn-link">Summary page</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#" class="btn btn-link">Skills page</a>
+        </li>
+    </ul>
 
 </main>
 
