--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -76,7 +76,7 @@
             </table>
         </section>
 
-        <section lass="col-12">
+        <section class="col-12">
             <div class="row gy-3 gx-1">
                 <div class='col-4'>
                     <div class="card text-bg-success text-center">
