--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -173,6 +173,94 @@
         </li>
     </ul>
 
+    <hr>
+    <hr>
+
+    <div class="card">
+        <div class="nav">
+            <div class="nav-item">
+                <a href="/skills" class="nav-link">Home page</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" class="nav-link disabled">Bootstrap</a>
+            </div>
+            <div class="nav-item">
+                <a href="summary" class="nav-link">FAQ page</a>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="row g-4">
+        <div class="col-12">
+            <div class="nav nav-tabs"> {{!-- nav-tabs додає знизу меню лінію --}}
+                <div class="nav-item">
+                    <a href="#" class="nav-link active">Main</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link disabled">Catalog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Shop list</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <div class="card-body"> {{!-- додає додаткових відступів --}}
+                    <div class="nav flex-column"> {{!-- flex-column робить меню навігації вертикальним/у стовбець --}}
+                        <div class="nav-item">
+                            <div class="card">
+                                <a href="/skills" class="nav-link">Home page</a>
+                            </div>
+                            <br>
+                        </div>
+                        <div class="nav-item">
+                            <div class="card">
+                                <a href="#" class="nav-link disabled">Bootstrap</a>
+                            </div>
+                            <br>
+                        </div>
+                        <div class="nav-item">
+                            <div class="card">
+                                <a href="summary" class="nav-link">FAQ page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-8">
+            <div claas="row">
+                <div class="col-12">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">PC & Netbook</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            MacBook
+                        </li>
+                    </ol>
+                </div>
+
+                <div class="col-12">
+                    <h6>Hello word! <span class="badge text-bg-warning rounded-pill text-uppercase">топ продажів</span>
+                    </h6>
+                    <button class="btn btn-primary rounded-pill">Clik me</button>
+
+                    <div class="alert alert-dark mt-4">
+                        This is importatnt info!
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </main>
 
 {{!--
