--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -4,6 +4,10 @@
 }}
 
 <main>
+    <hr>
+    <b>Ls3</b>
+    <hr>
+
     <div class="row gy-5">
         <section class="col-12">
             <div class="card">
@@ -174,6 +178,7 @@
     </ul>
 
     <hr>
+    <b>Ls4</b>
     <hr>
 
     <div class="card">
@@ -261,6 +266,109 @@
 
         </div>
     </div>
+
+    <hr>
+    <b>Ls5</b>
+    <hr>
+
+    <div class="row">
+        <div class="col-12">
+            <label class="form-label">Email address</label>
+            <input class="form-control">
+            <div class="form-text text-danger">Error. You need to set correct email</div>
+        </div>
+        <div class="col-12">
+            <label class="form-label">Email address</label>
+            <div class="row">
+                <div class="col-2">
+                    <input type="color" class="form-control">
+                </div>
+                <div class="col-2">
+                    <input type="color" class="form-control">
+                </div>
+                <div class="col-2">
+                    <input type="color" class="form-control">
+                </div>
+            </div>
+            <div class="form-text text-danger">Error. You need to set correct email</div>
+        </div>
+
+        <div class="col-12 mt-3">
+            <div class="row">
+                <div class="col-2 pt-1">
+                    <label class="form-label">Email address</label>
+                </div>
+                <div class="col-6">
+                    <input class="form-control form-control-sm">
+                </div>
+                <div class="col-4 ps-5 pt-1">
+                    <div class="form-text text-danger">Error. You need to set correct email</div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <hr>
+        </div>
+        <div class="col-12">
+            <label class="form-label">Select role</label>
+            <select class="form-select form-select-sm">
+                <option selected>Open list</option>
+                <option value="1">Admin</option>
+                <option value="2">user</option>
+            </select>
+            <div class="form-text text-danger">Error. You need to set correct role</div>
+        </div>
+
+        <div>
+            <hr>
+        </div>
+
+        <div class="col-12">
+            <div class="form-label">Select role</div>
+            <div class="form-check">
+                <label class="form-check-label">Apple</label>
+                <input type="checkbox" class="form-check-input">
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">Orange</label>
+                <input type="checkbox" class="form-check-input">
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">Melon</label>
+                <input type="checkbox" class="form-check-input">
+            </div>
+        </div>
+        <hr>
+
+        <div class="col-12">
+            <div class="form-label">Select role</div>
+            <div class="form-check">
+                <label class="form-check-label">Apple</label>
+                <input name="food" type="radio" class="form-check-input">
+                {{!-- без name="food" функція radio не працює (як "тільки одне із списку") --}}
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">Orange</label>
+                <input name="food" type="radio" class="form-check-input">
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">Melon</label>
+                <input name="food" type="radio" class="form-check-input">
+            </div>
+        </div>
+        <hr>
+
+        {{!-- Switch field займає в коді менше місця, ніж radio --}}
+        <div class="col-12">
+            <div class="form-check form-switch">
+                <label class="form-check-label">Get bonus</label>
+                <input name="food" type="checkbox" class="form-check-input">
+            </div>
+        </div>
+
+    </div>
+
 </main>
 
 {{!--
