--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -209,7 +209,7 @@
 
     <div class="col-12 my-5">
         {{#with goodsBlock}}
-        <div class="row gy=4і gx-2 pt-4">
+        <div class="row gy=4 gx-2 pt-4">
             <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src={{cards.[0].image}}>
