--- a/src/container/shopcatalog.hbs
+++ b/src/container/shopcatalog.hbs
@@ -100,14 +100,15 @@
                     {{/with}}
                 </section>
 
-                <section class="col-8 gx-1 gy-1">
+                <div class="col-8 gx-2 gy-2 ps-4 mt-o">
                     <div class="row">
                         {{#each goodsList}}
                         {{> catalogItem}}
                         {{/each}}
                     </div>
-                </section>
+                </div>
             </div>
+
             <br>
 
             <div class="mt-3 mb-3">
