add new data css

--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -5,7 +5,15 @@
 
 <main>
     <hr>
-    <b>Ls3</b> {{!-- ============================================== --}}
+    <b>Ls1 CSS</b>
+    <hr>
+    <h1>Hello word!</h1>
+
+    {{> title data='My title'}}
+
+    <div style="color:orange; background: black;">This is just text</div>
+    <hr>
+    <b>Ls3 BSTRP</b> {{!-- ============================================== --}}
     <hr>
 
     <div class="row gy-5">
@@ -178,7 +186,7 @@
     </ul>
 
     <hr>
-    <b>Ls4</b> {{!-- ====================================== --}}
+    <b>Ls4 BSTRP</b> {{!-- ====================================== --}}
     <hr>
 
     <div class="card">
@@ -267,7 +275,8 @@
     </div>
 
     <hr>
-    <b>Ls5</b> {{!-- ====================================== --}} {{!-- ==============================================
+    <b>Ls5 BSTRP</b> {{!-- ====================================== --}} {{!--
+    ==============================================
     --}}
     <hr>
 
@@ -370,7 +379,7 @@
     </div>
 
     <hr>
-    <b>Ls6</b> {{!-- ============================================== --}}
+    <b>Ls6 BSTRP</b> {{!-- ============================================== --}}
     <hr>
 
     <div>
