--- a/src/component/title.hbs
+++ b/src/component/title.hbs
@@ -1,10 +1,17 @@
 <div>
     {{#if big}}
-        <h2>{{data}}</h2>
+    <h2>{{data}}</h2>
     {{else}}
-        <h3>{{data}}</h3>
+    <h3>{{data}}</h3>
     {{/if}}
 </div>
 
-    
+<style>
+    h2 {
+        color: orange;
+    }
 
+    h3 {
+        color: green;
+    }
+</style>
