--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,18 +1,50 @@
-{{! 
-Це код container файлу для index сторінки, 
+{{!
+Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- }}
-
-<div class='p-5'>
-  <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
-
-  <button
-    type='button'
-    class='btn btn-primary'
-  >Купити</button>
-</div>
-
-{{! 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
 }}
+
+<section class="m-3 mt-5">
+  <h4>Список сторінок</h4>
+  <span>
+    В процессі навчання мною були створені сторінки, посилання на які знаходяться нижче.
+  </span>
+
+
+</section>
+<section class="m-3 mt-3">
+  <div class="col-2 m-2 ms-0">
+
+    <a href='/bio' class='btn btn-primary mb-2'>Albert Einstein</a>
+    <a href='/bootstrap' class='btn btn-primary mb-2'>Bootstrap</a>
+    <a href='/bootstrapold' class='btn btn-primary mb-2'>Bootstrapold</a>
+    <a href='/car' class='btn btn-primary mb-2 me-5'>Car</a>
+    <a href='/education' class='btn btn-primary mb-2'>Education</a>
+    <a href='/facebook' class='btn btn-primary mb-2'>Facebook</a>
+    <a href='/js' class='btn btn-primary mb-2'>Java Script</a>
+    <a href='/mac' class='btn btn-primary mb-2'>Mac Book</a>
+    <a href='/person' class='btn btn-primary mb-2'>Person</a>
+    <a href='/program' class='btn btn-primary mb-2'>Excursion</a>
+    <a href='/shopcart' class='btn btn-primary mb-2'>Shopcart</a>
+    <a href='/shopcatalog' class='btn btn-primary mb-2'>Laptop</a>
+    <a href='/shophome' class='btn btn-primary mb-2'>Shophome</a>
+    <a href='/shoporder' class='btn btn-primary mb-2'>Shoorder</a>
+    <a href='/shopprofile' class='btn btn-primary mb-2'>Shopprofile</a>
+    <a href='/shopreview' class='btn btn-primary mb-2'>Shopreview</a>
+    <a href='/skills' class='btn btn-primary mb-2'>Skills</a>
+    <a href='/summary' class='btn btn-primary mb-2'>Summary</a>
+    <a href='/task21' class='btn btn-primary mb-2 me-5'>Task21</a>
+    <a href='/task22' class='btn btn-primary mb-2 me-5'>Task22</a>
+    <a href='/task31' class='btn btn-primary mb-2 me-5'>Task31</a>
+    <a href='/web' class='btn btn-primary mb-2'>WEB languages</a>
+    <a href='/work' class='btn btn-primary'>Work history</a>
+  </div>
+</section>
+
+
+
+{{!
+Цей код містить лише те, що буде виводитись в
+
+<body>
+  Адже наш layout/default.hbs має вже структуру HTML
+  }}
